--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <!-- META -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+
+    <!-- TITLE -->
+    <title>Lynn Wolters</title>
+
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="./styles/home.css">
-    <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/root.css">
-    <link rel="stylesheet" href="./styles/typography.css">
-    <link rel="stylesheet" href="./styles/spacing.css">
-    <link rel="stylesheet" href="./styles/grid.css">
+
 </head>
 <body>
+
+    <!-- NAV -->
     <nav class="spacing-around">
         <ul>
             <li>
                 <a class="text-medium" href="index.html">Lynn Wolters</a>
             </li>
             <li>
-                <button class="text-medium">(Menu)</button>
+                <a class="text-medium" href="mailto:lynn.wolters27@gmail.com">Contact</a>
             </li>
         </ul>
     </nav>
 
+    <!-- HEADER -->
     <header class="grid spacing-around">
         <h1 class="text-large">Hallo!</h1>
         <div>
@@ -31,39 +35,40 @@
         </div>
     </header>
 
+    <!-- MAIN -->
     <main>
 
-        <!-- Section 1 -->
+        <!-- SECTION 1 -->
         <section class="spacing-around spacing-vertical">
-            <h2 class="text-large">Ik ben opzoek naar een <i>cool</i> bedrijf om een <u>halfjaar stage</u> te lopen, ben jij degene waar ik naar opzoek ben?</h2>
+            <h2 class="text-large">Ik ben opzoek naar een digital agency om een <u>halfjaar stage</u> te lopen.</h2>
         </section>
 
-        <!-- Section 2 -->
+        <!-- SECTION 2 -->
         <section class="spacing-around">
             <article class="grid">
                 <h2 class="text-small">Over Mij</h2>
-                <p class="text-medium">Mijn naam is Lynn Wolters en ik ben een 24 jaar oude Communicatie & Multimedia Design student bij de Hogeschool Van Amsterdam.</p>
+                <p class="text-medium">Mijn naam is Lynn Wolters en ik ben een 24 jaar oude, laatste jaars, Communicatie & Multimedia Design student bij de Hogeschool van Amsterdam.</p>
                 <div>
                     <img src="./img/me.jpg" alt="A profile picture of Lynn Wolters.">
                 </div>
             </article>
             <article class="grid">
-                <p class="text-medium">Ik hou van het brainstorm en iteratie proces waarbij je van niets naar iets gaat. Het creëren van slimme oplossingen die het leven van de gebruiker nét wat makkelijker of leuker maken - daar gaat mijn hart sneller van kloppen. <br><br> Tot nu toe heb ik me vooral gericht op de meer traditionele aspecten van de digitale design industrie, zoals branding, user interface/experience design en front-end development. Hoewel dat leuke opdrachten waren merk ik dat ik op zoek ben naar meer diepgang en voldoening. Ik wil niet simpelweg de uitvoering doen van wat bedacht is, maar juist vanaf het begin tot eind meedenken en écht bijdragen.</p>
+                <p class="text-medium">Als CMD student hou ik van het brainstorm en iteratie proces waarbij je van niets naar iets gaat. Het creëren van slimme oplossingen die het leven van de gebruiker nét wat makkelijker of leuker maken - daar gaat mijn hart sneller van kloppen. <br><br> Tot nu toe heb ik mij vooral gericht op de meer traditionele aspecten van de digitale design industrie, zoals branding, user interface/experience design en front-end development. Hoewel dat leuke opdrachten waren merk ik dat ik op zoek ben naar meer diepgang en voldoening. Ik wil niet simpelweg de uitvoering doen van wat bedacht is, maar juist vanaf het begin tot eind meedenken en écht bijdragen.</p>
                 <p class="text-medium">Ik wil daarom ontzettend graag meewerken aan het creëren van unieke digitale ervaringen waar mensen iets aan hebben zoals serious games, interactieve datavisualisaties of het ontwerpen van digitale services. </p>
             </article>
         </section>
 
-        <!-- Section 3 -->
+        <!-- SECTION 3 -->
         <section class="grid spacing-around spacing-vertical">
             <h2 class="text-large">Dit heb ik de afgelopen jaren gedaan :</h2>
         </section>
 
-        <!-- Section 4 -->
+        <!-- SECTION 4 -->
         <section class="spacing-around">
             <article class="grid">
                 <h2 class="text-small">Educatie</h2>
-                <p class="text-medium">Ik wil daarom ontzettend graag meewerken aan het creëren van unieke digitale ervaringen waar mensen iets aan hebben zoals serious games, interactieve datavisualisaties of het ontwerpen van digitale services.</p>
-                <p class="text-medium">Ik wil daarom ontzettend graag meewerken aan het creëren van unieke digitale ervaringen waar mensen iets aan hebben zoals serious games, interactieve datavisualisaties of het ontwerpen van digitale services.</p>
+                <p class="text-medium">Ik heb eerst de opleiding Mediavormgeving afgerond aan het ROC van Twente in Enschede, waarbij ik de richting van interaction design in ben gegaan. Daarna ben ik begonnen met Communicatie & Multimedia Design aan de Hogeschool van Amsterdam.</p>
+                <p class="text-medium">Tijdens mijn derde jaar volgde ik voor een halfjaar de minor Information Design en daarna de minor Web Design & Development, waar ik mijn vaardigheden in digital design en front-end development verder heb verdiept. </p>
             </article>
             <article class="grid">
                 <div>
@@ -72,123 +77,126 @@
             </article>
         </section>
 
-        <!-- Section 5 -->
+        <!-- SECTION 5 -->
         <section class="grid spacing-around">
             <h2 class="text-small">Ervaring</h2>
             <ul>
                 <li>
-                    <button class="accordion-button">
+                    <button>
                         <h3 class="grid text-medium">
                             <span>HvA</span>
                             <span>Student Assistent</span>
                             <span>4 Maanden</span>
                         </h3>
                     </button>
-                    <div class="accordion-panel">
+                    <div>
                         <h4 class="text-small">Front-end Development</h4>
-                        <p class="text-small">Studenten ondersteunen tijdens de Front-end Development lessen: vragen beantwoorden, theorie uitleggen en les geven.</p>
+                        <p class="text-small">Ik heb een tijdje studenten ondersteund tijdens de front-end development lessen, dit waren mijn taken: vragen beantwoorden, theorie uitleggen en les geven in accessibility en semantische html.</p>
                     </div>
                 </li>
                 <li>
-                    <button class="accordion-button">
+                    <button>
                         <h3 class="grid text-medium">
                             <span>Lama Lama</span>
                             <span>Stagiare</span>
                             <span>4 Maanden</span>
                         </h3>
                     </button>
-                    <div class="accordion-panel">
+                    <div>
                         <h4 class="text-small">Digital Design & Front-end Development</h4>
-                        <p class="text-small">Tijdens deze stageperiode heb ik de interne strategie website ontworpen en ontwikkeld waarbij de focus lag op het implementeren van interactieve / motion elementen. Op deze manier heb ik veel kennis opgedaan wat betreft creative coding en skills geleerd die erg waardevol zijn. Daarnaast heb ik deze opdracht / stage succesvol afgerond met een 10!</p>
+                        <p class="text-small">Tijdens mijn stageperiode bij Lama Lama heb ik de interne strategie website ontworpen en ontwikkeld waarbij de focus lag op het implementeren van interactieve / motion elementen. Tijdens deze periode heb ik veel kennis opgedaan wat betreft creative coding, object-oriented programming en skills geleerd die erg waardevol zijn. Daarnaast heb ik deze opdracht / stage succesvol afgerond met een 10!</p>
                     </div>
                 </li>
                 <li>
-                    <button class="accordion-button">
+                    <button>
                         <h3 class="grid text-medium">
                             <span>Stimmt Digital</span>
                             <span>Stagiare</span>
                             <span>6 Maanden</span>
                         </h3>
                     </button>
-                    <div class="accordion-panel">
+                    <div>
                         <h4 class="text-small">Digital Design & Front-end Development</h4>
-                        <p class="text-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <p class="text-small">Ik heb het brandbook van Stimmt en de webshop voor Tableware by Ter Steege ontworpen en ontwikkeld in Figma en Shopify. Hierbij heb ik veel ervaring opgedaan in user interface/experience design, met focus op het ontwerpen van consistente en gebruiksvriendelijke interfaces.</p>
                     </div>
                 </li>
                 <li>
-                    <button class="accordion-button">
+                    <button>
                         <h3 class="grid text-medium">
                             <span>Nerds & Company</span>
                             <span>Stagiare</span>
                             <span>6 Maanden</span>
                         </h3>
                     </button>
-                    <div class="accordion-panel">
-                        <h4 class="text-small">Branding, Digital Design & Front-end Development</h4>
-                        <p class="text-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <div>
+                        <h4 class="text-small">Branding & Digital Design</h4>
+                        <p class="text-small">Tijdens mijn stage bij Nerds & Company heb ik mij gericht op branding in combinatie met digital design. Ik werkte aan een fictieve redesign van Swapfiets, waarbij ik een sterk concept en een aantrekkelijk ontwerp neerzette. Dit heeft mijn inzicht in branding en digital design verder verdiept.</p>
                     </div>
                 </li>
                 <li>
-                    <button class="accordion-button">
+                    <button>
                         <h3 class="grid text-medium">
                             <span>Remote</span>
                             <span>Freelancer</span>
                             <span>1 Jaar</span>
                         </h3>
                     </button>
-                    <div class="accordion-panel">
+                    <div>
                         <h4 class="text-small">Grafische Vormgeving, Web Design & Web Development</h4>
-                        <p class="text-small">Branding klussen en het ontwikkelen van WordPress websites.</p>
+                        <p class="text-small">Het allereerste wat ik ooit heb gedaan in deze industrie waren freelance branding klusjes en het ontwikkelen van WordPress websites.</p>
                     </div>
                 </li>
             </ul>
         </section>
 
-        <!-- Section 6 -->
+        <!-- SECTION 6 -->
         <section class="grid spacing-around spacing-vertical">
             <h2 class="text-large">En dit is wat <br> ik ervan heb <br> geleerd :</h2>
         </section>
 
-        <!-- Section 7 -->
+        <!-- SECTION 7 -->
         <section class="grid spacing-around">
             <h2 class="text-small">Skills</h2>
             <article class="grid">
                 <ul>
-                    <h3 class="text-medium">Concept</h3>
+                    <h3 class="text-small">Concept</h3>
                     <li class="text-medium">Branding</li>
                     <li class="text-medium">Design Thinking</li>
+                    <li class="text-medium">Wireframing</li>
                 </ul>
                 <ul>
-                    <h3 class="text-medium">Design</h3>
-                    <li class="text-medium">Prototyping</li>
-                    <li class="text-medium">Wireframing</li>
+                    <h3 class="text-small">Design</h3>
                     <li class="text-medium">UI Design</li>
                     <li class="text-medium">UX Design</li>
+                    <li class="text-medium">Datavisualisatie</li>
+                    <li class="text-medium">Figma</li>
+                    <li class="text-medium">Adobe Tools</li>
                 </ul>
                 <ul>
-                    <h3 class="text-medium">Development</h3>
+                    <h3 class="text-small">Development</h3>
                     <li class="text-medium">Html</li>
                     <li class="text-medium">Css</li>
                     <li class="text-medium">JavaScript</li>
-                    <li class="text-medium">Tailwind</li>
                     <li class="text-medium">Gsap</li>
                     <li class="text-medium">D3</li>
                 </ul>
             </article>
         </section>
 
-        <!-- Section 8 -->
-        <section class="spacing-around spacing-vertical">
-            <h2 class="text-large">Conclusie - Ik ben een gedreven <u>allround</u> digital  designer en front-end developer met een passie voor het vak.</h2>
+        <!-- SECTION 8 -->
+        <section class="grid spacing-around spacing-vertical">
+            <h2 class="text-large">Ik ben een gedreven allround digital designer & front-end developer die niet kan wachten om voor haar laatste jaar nog écht iets gaafs neer te zetten.</h2>
+            <p class="text-medium">Kan jij mij hiermee helpen? Dan hoor ik heel graag van je en wie weet tot snel!</p>
         </section>
 
-        <!-- Section 9 -->
+        <!-- SECTION 9 -->
         <section class="spacing-around spacing-vertical">
             <img src="./img/illu-3.svg" alt="An illustration of a cool women.">
         </section>
 
     </main>
 
+    <!-- FOOTER -->
     <footer class="spacing-around">
         <p class="text-medium">©2024 Lynn Wolters</p>
         <ul class="text-medium">
@@ -201,6 +209,8 @@
         </ul>
     </footer>
 
+    <!-- SCRIPT -->
     <script type="module" src="./scripts/accordion.js"></script>
+
 </body>
 </html>
