--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a class="text-medium" href="index.html">Lynn Wolters</a>
             </li>
             <li>
-                <a class="text-medium" href="mailto:lynn.wolters27@gmail.com">Contact</a>
+                <a class="text-medium" href="mailto:lynn.wolters27@gmail.com">(Contact)</a>
             </li>
         </ul>
     </nav>
@@ -40,7 +40,7 @@
 
         <!-- SECTION 1 -->
         <section class="spacing-around spacing-vertical">
-            <h2 class="text-large">Ik ben opzoek naar een digital agency om een <u>halfjaar stage</u> te lopen.</h2>
+            <h2 class="text-large">Ik ben opzoek naar een <i>digital agency</i> om van november tot april stage te lopen.</h2>
         </section>
 
         <!-- SECTION 2 -->
@@ -60,7 +60,7 @@
 
         <!-- SECTION 3 -->
         <section class="grid spacing-around spacing-vertical">
-            <h2 class="text-large">Dit heb ik de afgelopen jaren gedaan :</h2>
+            <h2 class="text-large">Dit heb ik de <br> afgelopen jaren <br> gedaan:</h2>
         </section>
 
         <!-- SECTION 4 -->
@@ -151,7 +151,7 @@
 
         <!-- SECTION 6 -->
         <section class="grid spacing-around spacing-vertical">
-            <h2 class="text-large">En dit is wat <br> ik ervan heb <br> geleerd :</h2>
+            <h2 class="text-large">En dit is wat <br> ik ervan heb <br> geleerd:</h2>
         </section>
 
         <!-- SECTION 7 -->
@@ -185,8 +185,8 @@
 
         <!-- SECTION 8 -->
         <section class="grid spacing-around spacing-vertical">
-            <h2 class="text-large">Ik ben een gedreven allround digital designer & front-end developer die niet kan wachten om voor haar laatste jaar nog écht iets gaafs neer te zetten.</h2>
-            <p class="text-medium">Kan jij mij hiermee helpen? Dan hoor ik heel graag van je en wie weet tot snel!</p>
+            <h2 class="text-large">Ik ben een gedreven allround digital designer & front-end developer met een grote passie voor het vak.</h2>
+            <p class="text-medium">Ik kan niet wachten om voor het laatste jaar nog écht iets gaafs neer te zetten. - Heb jij een plekje vrij waarin ik betekenisvolle digitale ervaringen kan creëren? Dan hoor ik heel graag van je. <br><br> Misschien tot snel! <br><br> Groetjes, <br> Lynn Wolters </p>
         </section>
 
         <!-- SECTION 9 -->
