--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <!-- SECTION 1 -->
         <section class="spacing-around spacing-vertical">
-            <h2 class="text-large">Ik ben opzoek naar een <i>digital agency</i> om van november tot april stage te lopen.</h2>
+            <h2 class="text-large">Ik ben opzoek naar een <i>digital agency</i> om van <u>november tot april</u> stage te lopen.</h2>
         </section>
 
         <!-- SECTION 2 -->
@@ -185,7 +185,7 @@
 
         <!-- SECTION 8 -->
         <section class="grid spacing-around spacing-vertical">
-            <h2 class="text-large">Ik ben een gedreven allround digital designer & front-end developer met een grote passie voor het vak.</h2>
+            <h2 class="text-large">Ik ben een <i>gedreven</i> allround <u>digital designer & front-end developer</u> met een grote <i>passie</i> voor het vak.</h2>
             <p class="text-medium">Ik kan niet wachten om voor het laatste jaar nog écht iets gaafs neer te zetten. - Heb jij een plekje vrij waarin ik betekenisvolle digitale ervaringen kan creëren? Dan hoor ik heel graag van je. <br><br> Misschien tot snel! <br><br> Groetjes, <br> Lynn Wolters </p>
         </section>
 
